--- a/.config/i3/config
+++ b/.config/i3/config
@@ -1,78 +1,106 @@
-### Variables
+# i3 config file (v4)
 #
-# Logo key. Use Mod1 for Alt.
+# Please see https://i3wm.org/docs/userguide.html for a complete reference!
+
 set $mod Mod4
-# Home row direction keys, like vim
-set $left h
-set $down j
-set $up k
-set $right l
-# Your preferred terminal emulator
-set $term alacritty
-# Your preferred application launcher
-set $menu rofi_launcher.sh
+set $alt Mod1
+set $coloract "#505465"
+set $colorin "#373945"
+set $terminal urxvtc
+set_from_resource $color15 i3wm.color15 "#b8b2a7"
+set_from_resource $split i3wm.color10 "#849385"
+set_from_resource $coloru i3wm.color2 "#849385"
+set_from_resource $color0 i3wm.color0 "#2a2725"
+set_from_resource $color8 i3wm.color8 "#474543"
 
-gaps outer 5
-gaps inner 5
+# Font for window titles. Will also be used by the bar unless a different font
+# is used in the bar {} block below.
+font pango:monospace 8 
+gaps outer 10
+gaps inner 0
+new_window pixel 5
 
-font pango:Noto Sans UI 12
-
-### Key bindings
-bindsym XF86AudioRaiseVolume exec ponymix inc 2
-bindsym XF86AudioLowerVolume exec ponymix dec 2
-bindsym XF86AudioMute exec ponymix toggle
-
+######### COLORS ##########
 #
-# Basics:
-#
-# start a terminal
-bindsym $mod+Return exec $term
+# class                 border    backgr    text    indicator child_border
+client.focused          $coloract $coloract $color15 $split  $coloract
+client.focused_inactive $coloract $coloract $color15 $split  $colorin
+client.unfocused        $colorin  $colorin  $color15 $split  $colorin
+client.urgent           $coloru   $coloru   $color15 $coloru $coloru
+client.placeholder      $color0   $color8   $color15 $color0 $color8
+client.background       $color0
 
-bindsym $mod+Home exec slock
 
-# kill focused window
-bindsym $mod+End kill
+###### KEYBINDINGS #######
 
-# start your launcher
-bindsym $mod+space exec $menu
-
-# Drag floating windows by holding down $mod and left mouse button.
-# Resize them with right mouse button + $mod.
-# Despite the name, also works for non-floating windows.
 floating_modifier $mod
 
-# reload the configuration file
-bindsym $mod+Shift+c reload
 
-# exit sway (logs you out of your wayland session)
-bindsym $mod+Shift+e exit
-#
-# Moving around:
-#
-# Move your focus around
-bindsym $mod+$left focus left
-bindsym $mod+$down focus down
-bindsym $mod+$up focus up
-bindsym $mod+$right focus right
-# or use $mod+[up|down|left|right]
-bindsym $mod+Left focus left
-bindsym $mod+Down focus down
-bindsym $mod+Up focus up
+# change focus
+bindsym $mod+h focus left
+bindsym $mod+j focus down
+bindsym $mod+k focus up
+bindsym $mod+l focus right
+
+# alternatively, you can use the cursor keys:
+bindsym $mod+Left  focus left
+bindsym $mod+Down  focus down
+bindsym $mod+Up    focus up
 bindsym $mod+Right focus right
 
-# _move_ the focused window with the same, but add Shift
-bindsym $mod+Shift+$left move left
-bindsym $mod+Shift+$down move down
-bindsym $mod+Shift+$up move up
-bindsym $mod+Shift+$right move right
-# ditto, with arrow keys
-bindsym $mod+Shift+Left move left
-bindsym $mod+Shift+Down move down
-bindsym $mod+Shift+Up move up
+# move focused window
+bindsym $mod+Shift+h move left
+bindsym $mod+Shift+j move down
+bindsym $mod+Shift+k move up
+bindsym $mod+Shift+l move right
+
+# alternatively, you can use the cursor keys:
+bindsym $mod+Shift+Left  move left
+bindsym $mod+Shift+Down  move down
+bindsym $mod+Shift+Up    move up
 bindsym $mod+Shift+Right move right
-#
-# Workspaces:
-#
+
+# split in horizontal and vertical orientation
+bindsym $mod+s split v
+bindsym $mod+v split h
+
+# enter fullscreen mode for the focused container
+bindsym $mod+c fullscreen toggle
+
+# change container layout (stacked, tabbed, toggle split)
+bindsym $mod+Shift+t layout tabbed
+bindsym $mod+Shift+s layout stacked
+bindsym $mod+Shift+e layout toggle split
+
+# toggle tiling / floating
+bindsym $mod+Shift+space floating toggle
+bindsym $mod+o sticky toggle
+
+# change focus between tiling / floating windows
+bindsym $mod+space focus mode_toggle
+
+# focus the parent container
+bindsym $mod+p focus parent
+
+###### EXECUTE PROGRAMS ######
+
+bindsym $mod+f       exec thunar
+bindsym $mod+Shift+f exec urxvt -name fexplorer -e ranger
+bindsym $mod+w       exec qutebrowser
+bindsym $mod+m       exec urxvt -name music -e ncmpcpp
+bindsym $mod+$alt+t  exec wpg -m
+bindsym $alt+Tab     exec rofi -show window
+bindsym $mod+t       exec $terminal
+bindsym $mod+Return  exec $terminal
+bindsym $alt+F4      kill
+bindsym $alt+F2      exec rofi -show run
+
+bindsym --release Print exec scrot
+bindsym --release Shift+Print exec scrot -s
+
+# scratchpad terminal
+bindsym $mod+u [instance = "dropdown"] scratchpad show
+
 # switch to workspace
 bindsym $mod+1 workspace 1
 bindsym $mod+2 workspace 2
@@ -84,6 +112,7 @@ bindsym $mod+7 workspace 7
 bindsym $mod+8 workspace 8
 bindsym $mod+9 workspace 9
 bindsym $mod+0 workspace 10
+
 # move focused container to workspace
 bindsym $mod+Shift+1 move container to workspace 1
 bindsym $mod+Shift+2 move container to workspace 2
@@ -96,72 +125,85 @@ bindsym $mod+Shift+8 move container to workspace 8
 bindsym $mod+Shift+9 move container to workspace 9
 bindsym $mod+Shift+0 move container to workspace 10
 
-bindsym $mod+Control+Left move workspace to output left
-bindsym $mod+Control+Right move workspace to output right
-bindsym $mod+Control+Up move workspace to output up
-bindsym $mod+Control+Down move workspace to output down
-# Note: workspaces can have any name you want, not just numbers.
-# We just use 1-10 as the default.
-#
-# Layout stuff:
-#
-# You can "split" the current object of your focus with
-# $mod+b or $mod+v, for horizontal and vertical splits
-# respectively.
-bindsym $mod+b splith
-bindsym $mod+v splitv
+# reload the configuration file
+bindsym $mod+Shift+c reload
+# restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
+bindsym $mod+Shift+r restart
+# exit i3 (logs you out of your X session)
+bindsym $mod+Shift+x exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
 
-# Switch the current container between different layout styles
-bindsym $mod+s layout stacking
-bindsym $mod+w layout tabbed
-bindsym $mod+e layout toggle split
-
-# Make the current focus fullscreen
-bindsym $mod+f fullscreen
-
-# Toggle the current focus between tiling and floating mode
-bindsym $mod+Shift+space floating toggle
-
-# Swap focus between the tiling area and the floating area
-#bindsym $mod+space focus mode_toggle
-
-# move focus to the parent container
-bindsym $mod+a focus parent
-#
-# Scratchpad:
-#
-# Sway has a "scratchpad", which is a bag of holding for windows.
-# You can send windows there and get them back later.
-
-# Move the currently focused window to the scratchpad
-bindsym $mod+Shift+minus move scratchpad
-
-# Show the next scratchpad window or hide the focused scratchpad window.
-# If there are multiple scratchpad windows, this command cycles through them.
-bindsym $mod+minus scratchpad show
-#
-# Resizing containers:
-#
 mode "resize" {
-    # left will shrink the containers width
-    # right will grow the containers width
-    # up will shrink the containers height
-    # down will grow the containers height
-    bindsym $left resize shrink width 10 px or 10 ppt
-    bindsym $down resize grow height 10 px or 10 ppt
-    bindsym $up resize shrink height 10 px or 10 ppt
-    bindsym $right resize grow width 10 px or 10 ppt
+        # resize windows
+        bindsym l resize shrink width 30 px or 10 ppt
+        bindsym j resize grow height 30 px or 10 ppt
+        bindsym k resize shrink height 30 px or 10 ppt
+        bindsym h resize grow width 30 px or 10 ppt
 
-    # ditto, with arrow keys
-    bindsym Left resize shrink width 10 px or 10 ppt
-    bindsym Down resize grow height 10 px or 10 ppt
-    bindsym Up resize shrink height 10 px or 10 ppt
-    bindsym Right resize grow width 10 px or 10 ppt
+        # resize gaps
+        bindsym minus       gaps outer current plus 10
+        bindsym plus        gaps outer current minus 10
+        bindsym Shift+minus gaps inner current plus 10
+        bindsym Shift+plus  gaps inner current minus 10
 
-    # return to default mode
-    bindsym Return mode "default"
-    bindsym Escape mode "default"
+        # move windows
+        bindsym Shift+l move right 30
+        bindsym Shift+j move down 30
+        bindsym Shift+k move up 30
+        bindsym Shift+h move left 30
+
+        bindsym Return mode "default"
+        bindsym Escape mode "default"
 }
-bindsym $mod+r mode "resize"
 
-for_window [class="^.*"] border pixel 1
+mode "display" {
+
+        # toggle thinkpad modes
+        bindsym s exec dock-single
+        bindsym d exec dock-dual
+        bindsym t exec thinkpad
+
+        # toggle compton modes
+        bindsym f exec "killall compton; compton -b --inactive-dim 0.2"
+        bindsym n exec "killall compton; compton -b"
+
+        bindsym h move workspace to output left
+        bindsym l move workspace to output right
+
+        bindsym Return mode "default"
+        bindsym Escape mode "default"
+}
+
+bindsym $mod+r mode "resize"
+bindsym $mod+d mode "display"
+
+# i3 bar not present use polybar
+# bar {
+#         status_command i3status
+# }
+
+
+##### WINDOWS ######
+
+# assign [class = "Firefox"] 1
+# assign [class = "qutebrowser"] 1
+# assign [class = "Google-chrome"] 1
+# assign [class = "DBeaver"] 3
+# assign [class = "zoom"] 9
+# assign [instance = "music"] 10
+
+# for_window [class = "Wpg"] floating enable
+# for_window [instance = "dropdown"] move scratchpad
+# for_window [instance = "dropdown"] floating enable
+# for_window [instance = "music"] floating enable
+
+
+###### STARTUP ######
+
+exec --no-startup-id ~/.config/wpg/wp_init.sh
+# exec --no-startup-id "setxkbmap -option caps:escape"
+# exec --no-startup-id volumeicon
+# exec --no-startup-id compton
+# exec --no-startup-id urxvtd
+# exec --no-startup-id dockd --daemon
+# exec --no-startup-id urxvt -name dropdown
+# exec_always --no-startup-id ~/Code/scripts/polybar.sh
