--- a/.config/i3/config
+++ b/.config/i3/config
@@ -4,12 +4,12 @@
 
 set $mod Mod4
 set $alt Mod1
-set $coloract "#cb6385"
-set $colorin "#8c445b"
+set $coloract "#cb1140"
+set $colorin "#8b0c2c"
 set $terminal urxvtc
 set_from_resource $color15 i3wm.color15 "#ffe3ed"
-set_from_resource $split i3wm.color10 "#ff164e"
-set_from_resource $coloru i3wm.color2 "#EC1F45"
+set_from_resource $split i3wm.color10 "#ff1650"
+set_from_resource $coloru i3wm.color2 "#EC1F46"
 set_from_resource $color0 i3wm.color0 "#050A37"
 set_from_resource $color8 i3wm.color8 "#081165"
 
