--- a/.config/i3/config
+++ b/.config/i3/config
@@ -4,14 +4,14 @@
 
 set $mod Mod4
 set $alt Mod1
-set $coloract "#448892"
-set $colorin "#2f5d64"
+set $coloract "#354758"
+set $colorin "#24303c"
 set $terminal urxvtc
-set_from_resource $color15 i3wm.color15 "#e9ffff"
-set_from_resource $split i3wm.color10 "#66c495"
-set_from_resource $coloru i3wm.color2 "#5A8C73"
-set_from_resource $color0 i3wm.color0 "#081112"
-set_from_resource $color8 i3wm.color8 "#163235"
+set_from_resource $color15 i3wm.color15 "#e6eef8"
+set_from_resource $split i3wm.color10 "#575c73"
+set_from_resource $coloru i3wm.color2 "#4B4C51"
+set_from_resource $color0 i3wm.color0 "#0c0a0a"
+set_from_resource $color8 i3wm.color8 "#272020"
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
