--- a/.config/rofi/config
+++ b/.config/rofi/config
@@ -3,10 +3,10 @@ rofi.width:                          50
 rofi.lines:                          15
 rofi.columns:                        1
 rofi.font:                           roboto mono 10
-rofi.color-normal:                   #081112, #e9ffff, #081112, #448892, #e9ffff
-rofi.color-urgent:                   #081112, #d6b48d, #22231D, #d6b48d, #e9ffff
-rofi.color-active:                   #081112, #77dbbe, #081112, #77dbbe, #081112
-rofi.color-window:                   #081112, #448892, #2f5d64
+rofi.color-normal:                   #0c0a0a, #e6eef8, #0c0a0a, #354758, #e6eef8
+rofi.color-urgent:                   #0c0a0a, #d6b48d, #22231D, #d6b48d, #e6eef8
+rofi.color-active:                   #0c0a0a, #6d7593, #0c0a0a, #6d7593, #0c0a0a
+rofi.color-window:                   #0c0a0a, #354758, #24303c
 rofi.bw:                             5
 rofi.location:                       0
 rofi.padding:                        5
