--- a/.config/i3/config
+++ b/.config/i3/config
@@ -4,14 +4,14 @@
 
 set $mod Mod4
 set $alt Mod1
-set $coloract "#354758"
-set $colorin "#24303c"
+set $coloract "#670110"
+set $colorin "#47010b"
 set $terminal urxvtc
-set_from_resource $color15 i3wm.color15 "#e6eef8"
-set_from_resource $split i3wm.color10 "#575c73"
-set_from_resource $coloru i3wm.color2 "#4B4C51"
-set_from_resource $color0 i3wm.color0 "#0c0a0a"
-set_from_resource $color8 i3wm.color8 "#272020"
+set_from_resource $color15 i3wm.color15 "#fdcfcf"
+set_from_resource $split i3wm.color10 "#b81332"
+set_from_resource $coloru i3wm.color2 "#84182c"
+set_from_resource $color0 i3wm.color0 "#010101"
+set_from_resource $color8 i3wm.color8 "#1c1616"
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
