--- a/.config/rofi/config
+++ b/.config/rofi/config
@@ -3,10 +3,10 @@ rofi.width:                          50
 rofi.lines:                          15
 rofi.columns:                        1
 rofi.font:                           roboto mono 10
-rofi.color-normal:                   #0c0a0a, #e6eef8, #0c0a0a, #354758, #e6eef8
-rofi.color-urgent:                   #0c0a0a, #d6b48d, #22231D, #d6b48d, #e6eef8
-rofi.color-active:                   #0c0a0a, #6d7593, #0c0a0a, #6d7593, #0c0a0a
-rofi.color-window:                   #0c0a0a, #354758, #24303c
+rofi.color-normal:                   #010101, #fdcfcf, #010101, #670110, #fdcfcf
+rofi.color-urgent:                   #010101, #d6b48d, #22231D, #d6b48d, #fdcfcf
+rofi.color-active:                   #010101, #820115, #010101, #820115, #010101
+rofi.color-window:                   #010101, #670110, #47010b
 rofi.bw:                             5
 rofi.location:                       0
 rofi.padding:                        5
