--- a/.config/sway/config
+++ b/.config/sway/config
@@ -1,3 +1,4 @@
+
 # Read `man 5 sway` for a complete reference.
 
 ### Variables
@@ -221,23 +222,12 @@ mode "resize" {
 bindsym $mod+r mode "resize"
 
 include /etc/sway/config.d/*
-
-include ~/src/base16-sway/themes/base16-black-metal.config
-# Basic color configuration using the Base16 variables for windows and borders.
-# KLARDOTSH: modified heavily to handle base16-black-metal's weirdness
-# Property Name         Border  BG      Text    Indicator Child Border
-client.focused          $base05 $base01 $base05 $base0D $base0D
-client.focused_inactive $base01 $base01 $base05 $base03 $base01
-#client.focused          $base01 $base00 $base05 $base01 $base01
-#client.focused_inactive $base01 $base00 $base0F $base01 $base01
-client.unfocused        $base01 $base00 $base0F $base01 $base01
-client.urgent           $base0A $base0A $base00 $base0A $base0A
-client.placeholder      $base00 $base00 $base05 $base00 $base00
-client.background       $base07
+include ~/.config/sway/`hostname`.config
 
 # Eliminate titlebars
 for_window [title="^.*"] border pixel 1
 
+# this... doesn't seem to work on a fresh musl-based void install?
 exec_always import-gsettings \
     gtk-theme:gtk-theme-name \
     icon-theme:gtk-icon-theme-name \
