--- a/.config/sway/config
+++ b/.config/sway/config
@@ -1,4 +1,3 @@
-
 # Read `man 5 sway` for a complete reference.
 
 ### Variables
@@ -11,7 +10,7 @@ set $down j
 set $up k
 set $right l
 # Your preferred terminal emulator
-set $term alacritty
+set $term kitty
 # Your preferred application launcher
 set $menu rofi -modi combi -show combi -combi-modi drun,run -font "Noto Sans 11" -bw 0 -separator-style solid
 # j4-dmenu-desktop --dmenu="bemenu -i"
