--- a/etc/portage/devotee.make.conf
+++ b/etc/portage/devotee.make.conf
@@ -10,6 +10,7 @@ FFLAGS="${COMMON_FLAGS}"
 LDFLAGS="-Wl,-O2 -Wl,--as-needed"
 
 VIDEO_CARDS="intel i965"
+CPU_FLAGS_X86="aes avx avx2 f16c fma3 mmx mmxext pclmul popcnt sse sse2 sse3 sse4_1 sse4_2 ssse3"
 
 MAKEOPTS="-j9"
 PORTAGE_NICENESS="19"
